--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "sass": "^1.57.1",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
