Rewrote api fetches to not depend on session

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "https://gautedl-odinbook.onrender.com",
-  "homepage": "https://gautedl.github.io/odinbook",
+  "homepage": "https://gautedl.github.io/odinbook-frontend",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
