--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "odinbook-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://gautedl-odinbook.onrender.com",
+  "proxy": "http://localhost:3001/",
   "homepage": "https://gautedl.github.io/odinbook-frontend",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
